fix overflow on phone

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
     --nav-size: 80px;
     --background-color: #f9f9f93f;
     --text-color:#fff;
+    --btn-background:#74b48d98;
 }
 
 html {
@@ -49,7 +50,7 @@ body {
 }
 
 .btn:hover {
-    background: #74B49B;
+    background: var(--btn-background);
     border: 1px solid #74B49B;
     color: #000;
 }
@@ -144,4 +145,58 @@ body {
 }
 .get-localtion>button {
     padding: 10px 20px;
+}
+
+/* moble */
+
+.container-mob{
+    padding: 50% 0;
+}
+
+.form-container-mob{
+    display: flex;
+    flex-direction: column;
+    padding: 20px 10px;
+    width: calc(100% );
+}
+
+.form-container-mob>input{
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.form-mob{
+    width: calc(100% - 40px);
+}
+
+.wrapper-mob {
+    display: flex;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 40px 0;
+    margin: calc(50%/2) 0;
+}
+
+.wrapper-mob > .header-text{
+    font-size: 1.4rem;
+}
+
+.wrapper-mob > .get-localtion>button{
+    font-size: 1.25rem;
+    background: var(--btn-background);
+}
+
+.label-mob{
+    color: var(--text-color);
+    padding: 10px 5px 5px 5px;
+    font-size: 1.25rem;
+}
+
+.btn-mob{
+    background-color: var(--btn-background);
+    
 }
